# OperatingSystemsFinal

./: CMakeLists.txt  Dirent.cpp  Dirent.h  FileAccess.cpp  FileAccess.h  Inode.cpp  Inode.h  PartitionEntry.cpp  PartitionEntry.h  PartitionFile.cpp  PartitionFile.h  VDIFile.cpp  VDIFile.h  displayBuffers.cpp  displayBuffers.cpp.h  displayBuffers.h  exceptions.cpp  exceptions.h  ext2Files.cpp  ext2Files.h  main.cpp  uuid2ascii.cpp
